Fixed behavior when the data display elements overflow.

--- a/resources/public/css/demo.css
+++ b/resources/public/css/demo.css
@@ -69,10 +69,10 @@ a:hover {
 }
 
 /*
-** If ClojureScript is inserting its app here, and the layout has flexbox
-** elements that are expected to occupy remaining height (think header,
-** main, footer where the main div pushes the footer to the bottom of the
-** page, you need to make sure the div maintains the chain of 100% height
+** If ClojureScript is inserting its app here (in the "app-div", and the layout
+** has flexbox elements that are expected to occupy remaining height (think
+** header, main, footer where the main div pushes the footer to the bottom of
+** the page, you need to make sure the div maintains the chain of 100% height
 ** elements.
  */
 .app-div {
@@ -92,7 +92,6 @@ main {
 }
 
 .editor-column, .info-column {
-    background: var(--column-background-color);
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -100,31 +99,43 @@ main {
 }
 
 .editor-column {
+    background: var(--column-background-color);
     border: 1px solid var(--border-color);
     margin-right: 0.5rem;
 }
 
 .info-column {
+    background: var(--body-background-color);
     margin-left: 0.5rem;
 }
 
 .info-item {
+    background: var(--column-background-color);
     border: 1px solid var(--border-color);
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin-bottom: 0.5rem;
     padding: 0.5rem;
 }
 
+.info-item:last-child {
+    margin-bottom: 0;
+}
+
 .info-title {
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 .info-text-data {
     font-size: 1.2rem;
+    overflow-y: auto;
 }
 
 .info-code-data {
     font-family: var(--fixed-font-family);
+    overflow-y: auto;
 }
 
 /*
